--- a/core/pom.xml
+++ b/core/pom.xml
@@ -207,8 +207,8 @@
       <artifactId>gt-brewer</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.vividsolutions</groupId>
-      <artifactId>jts</artifactId>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
@@ -389,8 +389,8 @@
           <artifactId>xalan</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>com.vividsolutions</groupId>
-          <artifactId>jts</artifactId>
+          <groupId>org.locationtech.jts</groupId>
+          <artifactId>jts-core</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
