--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -45,8 +45,8 @@
       <artifactId>lucene-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.vividsolutions</groupId>
-      <artifactId>jts</artifactId>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
